--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "axios": "^1.6.8",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "chalk": "^4.1.2",
+    "clear-screen": "^1.0.0",
     "cli": "^1.0.1",
+    "cli-progress": "^3.12.0",
     "dotenv": "^16.4.5",
     "figlet": "^1.5.2",
     "fs-extra": "^10.1.0",
     "inquirer": "^8.2.5",
+    "inquirer-search-list": "^1.2.6",
+    "inquirer-tree-prompt": "^1.1.2",
     "inversify": "^6.0.1",
     "js-yaml": "^4.1.0",
     "kleur": "^4.1.5",
     "node-command-line": "^1.0.2",
+    "ora": "^8.0.1",
     "readline-sync": "^1.4.10",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^2.0.0",
