--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cli": "^1.0.1",
     "cli-progress": "^3.12.0",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "figlet": "^1.5.2",
     "fs-extra": "^10.1.0",
     "inquirer": "^8.2.5",
@@ -29,6 +30,7 @@
     "js-yaml": "^4.1.0",
     "kleur": "^4.1.5",
     "node-command-line": "^1.0.2",
+    "openai": "^4.47.1",
     "ora": "^8.0.1",
     "readline-sync": "^1.4.10",
     "reflect-metadata": "^0.1.13",
